K8s/homelab/manifests/web-check/webcheck.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  webcheck
  namespace: utilities
  labels:
    app:  web-check
spec:
  selector:
    matchLabels:
      app: web-check
  replicas: 1
  template:
    metadata:
      labels:
        app:  web-check
    spec:
      containers:
      - name:  web-check
        image:  lissy93/web-check
        resources:
          requests:
            cpu: 80m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 150Mi
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  3000
          name:  http
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: webcheck
  namespace: utilities
spec:
  selector:
    app: web-check
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
