K8s/homelab/manifests/web-check/webcheck-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webcheck-route
  namespace: utilities
spec:
  parentRefs:
  - name: cilium-gw
    namespace: gateway
  hostnames:
  - "webcheck.k8s.z3cyber.tech"
  rules:
   - backendRefs:
      - name: webcheck
        port: 3000
